fix: support group add mode for community parents
