# docs/swagger.yaml
@@ -162,7 +162,7 @@ definitions:
       description:
         type: string
       subject:
-        maxLength: 25
+        maxLength: 100
         minLength: 1
         type: string
     required:
@@ -177,7 +177,7 @@ definitions:
           type: string
         type: array
       subject:
-        maxLength: 25
+        maxLength: 100
         minLength: 1
         type: string
     required:
@@ -196,7 +196,7 @@ definitions:
       promoteParticipants:
         type: boolean
       subject:
-        maxLength: 25
+        maxLength: 100
         minLength: 1
         type: string
     required:
@@ -361,12 +361,25 @@ definitions:
     - groupJid
     - numbers
     type: object
+  dto.GroupSetAddModeRequest:
+    properties:
+      groupJid:
+        type: string
+      mode:
+        enum:
+        - admin_add
+        - all_member_add
+        type: string
+    required:
+    - groupJid
+    - mode
+    type: object
   dto.GroupSubjectRequest:
     properties:
       groupJid:
         type: string
       subject:
-        maxLength: 25
+        maxLength: 100
         minLength: 1
         type: string
     required:
@@ -2439,6 +2452,70 @@ paths:
       summary: Send group invite link via text to phone numbers
       tags:
       - Group
+  /v1/group/setGroupAddMode/{instance}:
+    post:
+      consumes:
+      - application/json
+      description: Sets admin_add or all_member_add. A community parent JID is automatically
+        resolved to its default announcement subgroup.
+      operationId: postV1GroupSetGroupAddModeByInstance
+      parameters:
+      - description: Instance ID
+        in: path
+        name: instance
+        required: true
+        type: string
+      - description: Member add mode payload
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.GroupSetAddModeRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.HTTPErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.AuthenticationErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/utils.HTTPErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.HTTPErrorResponse'
+        "410":
+          description: Gone
+          schema:
+            $ref: '#/definitions/utils.HTTPErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/utils.HTTPErrorResponse'
+        "429":
+          description: Too Many Requests
+          schema:
+            $ref: '#/definitions/utils.HTTPErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.HTTPErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Set who can add members to a group
+      tags:
+      - Group
   /v1/group/toggleEphemeral/{instance}:
     post:
       consumes:
@@ -3872,6 +3949,8 @@ paths:
     post:
       consumes:
       - application/json
+      description: Accepts a group/subgroup JID. If communityJid is a community parent,
+        the operation is applied to its default announcement subgroup.
       operationId: postV1InstanceByInstanceCommunitySetMemberAddMode
       parameters:
       - description: Instance ID
